# cv-auto-apply

./: .gitignore  README.md  STATUS.md  borrame.json
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: __init__.py  seed_learned_mappings.py
backend/src/cvapplier/: __init__.py  main.py
backend/src/cvapplier/api/: __init__.py
backend/src/cvapplier/core/: config.py  db.py  deps.py  exceptions.py  logging.py  rate_limit.py  security.py  storage.py
backend/src/cvapplier/models/: __init__.py  cv.py  feedback_event.py  fill_session.py  learned_mapping.py  profile.py  user.py
backend/src/cvapplier/repositories/: __init__.py  cv_repository.py  feedback_repository.py  learned_mapping_repository.py  profile_repository.py  user_repository.py
backend/src/cvapplier/schemas/: auth_login.py  auth_me.py  auth_register.py  cv_metadata.py  error.py  feedback_batch.py  mapping_lookup.py  profile_get.py  profile_update.py  session_list.py  settings_get.py  settings_update.py  ws_messages.py
backend/src/cvapplier/services/: auth_service.py  cv_parser_service.py  cv_service.py  encryption.py  heuristic_engine.py  llm_gateway.py  mapping_service.py  profile_service.py  session_service.py  settings_service.py  user_service.py
backend/src/cvapplier/utils/: pii.py
backend/src/cvapplier/workers/: __init__.py  (+2 more)
backend/src/smartcvapply/: __init__.py  main.py
backend/tests/: __init__.py  conftest.py  test_auth_service.py  test_encryption.py  test_heuristic_engine.py  test_integration.py  test_mapping_prompts.py  test_profile_service.py  test_settings_service.py
(+82 files in other folders)
