[project]
name = "cvapplier"
version = "0.1.0"
description = "CVApplier backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "beanie>=1.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "motor>=3.6.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "litellm>=1.51.0",
    "aioboto3>=13.1.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "websockets>=13.0.0",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "mongomock-motor>=0.0.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
